--- a/index.html
+++ b/index.html
@@ -10,115 +10,121 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <div class="container-logo">
-    <h1 id="logo"><i></i>Green Garden</h1>
-    <p id="footer">
-      Made by
-      <a href="https://github.com/SoponwichTha"> <i></i> Soponwich</a>
-    </p>
+    <div class="bg-img">
+      <img
+        src="https://images.unsplash.com/photo-1683010450724-6a881d875d4f?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="plant-background"
+      />
+    </div>
+    <div class="title">
+      <img src="/img/odin-lined.png" alt="" />
+      <p>Gardenar</p>
+    </div>
+    <span class="footer"
+      >Made by <a href="https://github.com/SoponwichTha">Soponwich</a></span
+    >
   </div>
 
   <div class="container-main">
-    <div class="form-container" id="formContainer">
-      <div class="top-section" id="topSection">
-        <h2>
-          We will take all your ideas and give you sustainable & practical
-          landscaping solutions that will assist your garden to thrive.
-        </h2>
-        <h4>
-          We do irrigation sod installation tree trimming and fine-gardening
-          services.
-        </h4>
+    <div class="top-section" id="topSection">
+      <h2>
+        This is not a real online service! This is part of odin project
+        learning. Persistent and Grit is one of the important thing through the
+        course. Sign up now to get started.
+      </h2>
+      <p>
+        If you want to be come web developer please consider Theodinproject.
+      </p>
+    </div>
+    <div class="mid-section" id="midSection">
+      <div class="form-container" id="formContainer">
+        <form action="">
+          <p>Let's get started!</p>
+          <span
+            >Fields marked with a (<span style="color: #c00"> *</span>) must be
+            filled in.</span
+          >
+          <div>
+            <input
+              id="f-name"
+              name="user-name"
+              placeholder="FN"
+              pattern="[a-zA-Z]+"
+              required
+            />
+            <label for="f-name">First Name<span> *</span></label>
+            <p>Name must only contain letters!</p>
+          </div>
+          <div>
+            <input
+              id="l-name"
+              name="last-name"
+              placeholder="LN"
+              pattern="[a-zA-Z]+"
+            />
+            <label for="l-name">Last Name</label>
+            <p>Must contain only letters</p>
+          </div>
+          <div>
+            <input
+              type="email"
+              id="email"
+              name="user-email"
+              placeholder="E"
+              required
+            />
+            <label for="email">Email<span> *</span></label>
+            <p>Valid format: Example@email.com</p>
+          </div>
+          <div>
+            <input
+              type="tel"
+              id="phone"
+              name="user-phone"
+              placeholder="PN"
+              pattern="[0-9]{11}"
+            />
+            <label for="phone">Phone Number</label>
+            <p>It must be an 11-digit number!</p>
+          </div>
+          <div>
+            <input
+              type="password"
+              id="pwd"
+              name="user-pwd"
+              placeholder="pw"
+              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])"
+              minlength="8"
+              required
+            />
+            <label for="pwd">Password<span> *</span></label>
+            <p>
+              Minimum requirement: 8 characters long, one letter and one digit.
+            </p>
+          </div>
+          <div>
+            <input
+              type="password"
+              id="confirm"
+              name="pwd-confirm"
+              placeholder="Cp"
+              required
+            />
+            <label for="confirm">Confirm Password<span> *</span></label>
+            <p>Enter your password a second time.</p>
+          </div>
+        </form>
       </div>
-      <form action="#">
-        <div class="mid-section" id="midSection">
-          <h3>Sign up now!</h3>
-          <div class="data-row">
-            <div class="data">
-              <label for="first-name">*First Name</label>
-              <input
-                type="text"
-                id="first-name"
-                name="first-name"
-                minlength="2"
-                maxlength="20"
-                placeholder="John"
-                required
-              />
-            </div>
-            <div class="data">
-              <label for="last-name">*Last Name</label>
-              <input
-                type="text"
-                id="last-name"
-                name="last-name"
-                minlength="2"
-                maxlength="20"
-                placeholder="Doe"
-                required
-              />
-            </div>
-          </div>
-          <div class="data-row">
-            <div class="data">
-              <label for="email">*Email</label>
-              <input
-                type="email"
-                id="email"
-                name="email"
-                minlength="3"
-                maxlength="50"
-                placeholder="john_doe@email.com"
-                required
-              />
-            </div>
-            <div class="data">
-              <label for="phone">Phone Number</label>
-              <input
-                type="tel"
-                id="tel"
-                name="tel"
-                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-                placeholder="595-595-5599"
-              />
-            </div>
-          </div>
-          <div class="data-row">
-            <div class="data">
-              <label for="password">*Password</label>
-              <input
-                type="password"
-                id="password"
-                name="password"
-                minlength="6"
-                maxlength="20"
-                placeholder=" "
-                required
-              />
-              <span id="passError"></span>
-            </div>
-            <div class="data">
-              <label for="confirm-password">*Confirm Password</label>
-              <input
-                type="password"
-                id="confirm-password"
-                name="confirm-password"
-                minlength="6"
-                maxlength="20"
-                placeholder=" "
-                required
-              />
-              <span id="confirmError"></span>
-            </div>
-          </div>
-        </div>
-        <div class="bottom-section" id="bottomSection">
-          <button type="submit">Sign up</button>
-        </div>
-      </form>
+      <div class="bottom-section" id="bottomSection">
+        <button type="submit">Sign up</button>
+        <p>
+          Already have an account? <a href=""><b>Log in</b></a>
+        </p>
+      </div>
     </div>
   </div>
 
